# OCR-Paddle

./: .env.example  .gitignore  branch_structure.json  pyproject.toml  setup-runpod.sh  start.sh
app/: config.py  main.py
app/routers/: parse.py
app/services/: llm_correct.py  merge.py  ocr.py  pdf.py  table_align.py
